# zeolead--real-time-embedded-team7

./: CMakeLists.txt  CMakeSettings.json  DEV_Config.hpp  DRV8825.cpp  DRV8825.hpp  Debug.hpp  Dev_Config.cpp  Kalman_Plot.cpp  LICENSE  MotorControl.cpp  MotorControl.hpp  PID.cpp  PID.h  PID.hpp  README.md  Webservercontroller.cpp  Webservercontroller.hpp  bluetooth.cpp  bluetooth_com.cpp  callback_test.cpp  control.cpp  cppremote.cpp  helloworld.cpp  main.cpp  main_with_remote.cpp  mainremote.cpp  motor_main.cpp  motorcontrol_callback_test.cpp  mpu6050_Kalman.cpp  mpu6050_Kalman.hpp  mpu6050_Kalman_plot_0.005_0.03_0.03.cpp  mpu6050_test001.cpp  mpu6050_test001.h  mpu6050_test001.hpp  mpu6050_test001_plot.cpp  pid.cpp  pid_callback_test.cpp  plot_sensor.py  websocket.py  websocketcontroller.hpp
MotorControl/MotorControl/: CMakeLists.txt
MotorControl/MotorControl/MotorControl/: CMakeLists.txt  CMakeSettings.json  DEV_Config.hpp  DRV8825.cpp  DRV8825.hpp  Debug.hpp  MotorControl.cpp  MotorControl.hpp  motor_main.cpp
interupt_motor/: interupt_motor.sln
interupt_motor/interupt_motor/: Dev_Config.cpp  Motor.cpp  MotorControl.cpp  MotorControl.hpp  interupt_motor.vcxproj  interupt_motor.vcxproj.filters  motor_main.cpp
interupt_motor/interupt_motor/x64/Debug/: interupt_motor.exe.recipe  vc143.idb
interupt_motor/interupt_motor/x64/Debug/interupt_motor.tlog/: interupt_motor.lastbuildstate
remote control/: index.html  index.js  remote.js
